<resources>
    <string name="app_name">Hurry Up</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="hint_search">search</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">195844920866022</string>
    <string name="fb_login_protocol_scheme">fb323924611304606</string>

    <string-array name="picture_method">
        <item>Gallery</item>
        <item>Take a Photo</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createEvent">Create Event</string>
    <string name="location">Location</string>
    <string name="inviteFriends">Invite Friends</string>
    <string name="EventName">Event Name</string>
    <string name="btnLocate">locate</string>
    <string name="Time">Time</string>
    <string name="upcomingEvent">Upcoming Event</string>
    <string name="searchFriend">Search New Friends</string>
    <string name="Friend_List">Friend List</string>
    <string name="Logout">Logout</string>
    <string name="noFriendYet">You don\'t have friend yet, come and join the community!</string>
    <string name="gotoSearchFriend">Search for New Friend!</string>
    <string name="topTem">Top Ten Users!</string>
    <string name="notifyMe">Notify Me!</string>
    <string name="btnSearch">search</string>
    <string name="btnDone">Done!</string>
    <string name="btnInvite">invite</string>
    <string name="textViewScore">Score:</string>
    <string name="eventStarted">Your Party Just Started!</string>
    <string name="YourNewestScore">Your Newest Score Is:</string>
    <string name="GoBackProfile">Go Back To My Porfile!</string>
    <string name="user_display_name">Your name</string>
</resources>
